--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
+
     <string name="app_name">To do List</string>
+
+    <!-- Label -->
     <string name="label_tasks">Tarefas</string>
     <string name="label_new_task">Nova Tarefa</string>
     <string name="label_save_task">Salvar Tarefa</string>
@@ -9,10 +12,19 @@
     <string name="label_date">Data</string>
     <string name="label_hour">Hora</string>
     <string name="label_cancel">Cancelar</string>
-    <string name="dialog_title">Descartar alterações?</string>
-    <string name="dialog_message">Deseja voltar e descartar as alterações realizadas?</string>
-    <string name="dialog_positive">Sim</string>
-    <string name="dialog_negative">Não</string>
-    <string name="snackbar_dismiss">OK</string>
-    <string name="snackbar_message">A tarefa precisa ter um título ou uma descrição.</string>
+    <string name="label_edit">Editar</string>
+    <string name="label_delete">Excluir</string>
+    <string name="label_yes">Sim</string>
+    <string name="label_no">Não</string>
+    <string name="label_ok">OK</string>
+
+    <!-- Message -->
+    <string name="dialog_discard_title">Descartar alterações?</string>
+    <string name="dialog_discard_message">Deseja voltar e descartar as alterações realizadas?</string>
+    <string name="dialog_delete_message">Deseja excluir esta tarefa?</string>
+    <string name="snackbar_blank_message">A tarefa precisa ter um título ou uma descrição.</string>
+
+    <!-- Description -->
+    <string name="description_btn_menu">menu button</string>
+
 </resources>
